<resources>
    <string name="app_name">PlantBuddy</string>
    <string name="title_activity_main1">MainActivity</string>

    <string name="fabAdd_description">Add plant </string>
    <string name="fabHome_description">Home </string>
    <string name="fabMaps_description">Maps</string>

    <string name="heading_input_plant">ADD PLANT</string>
    <string name="heading_update_plant">UPDATE PLANT</string>
    <string name="buttonAddPlant">ADD PLANT</string>
    <string name="buttonUpdatePlant">UPDATE PLANT</string>
    <string name="etHintName">Name</string>
    <string name="etHintType">Type</string>
    <string name="etHintSchedule">Schedule</string>

    <string name="home_screen_heading">PlantBuddy</string>

    <string name="store_detail_name">Store Name</string>
    <string name="store_detail_address">Store Address</string>
    <string name="store_detail_working_hours">Working Hours</string>
    <string name="store_detail_contact">Contact</string>


    <string name="imgDescription">Plant</string>
    <string name="listPlant_name">Plant Name</string>
    <string name="listPlant_type">Plant Type</string>
    <string name="listPlant_schedule">Plant Schedule</string>

    <string name="add_your_first_plant_heading">Add your first plant</string>
    <string name="add_your_first_plant_description">PlantBuddy will then add it to the list of your plants.</string>
    <string name="title_activity_main_navigation">MainNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="lastWateringDateAndTime">Last Watering Date and Time:</string>


    <string-array name="plant_types">
        <item>Cactus</item>
        <item>Orchid</item>
        <item>Fern</item>
        <item>Succulent</item>
        <item>Bamboo</item>
        <item>Spider Plant</item>
        <item>Peace Lily</item>
        <item>Aloe Vera</item>
        <item>Snake Plant</item>
        <item>Philodendron</item>
        <item>Rubber Plant</item>
        <item>Ficus</item>
        <item>Pothos</item>
        <item>Bonsai</item>
        <item>Palm</item>
        <item>Money Tree</item>
        <item>Jade Plant</item>
        <item>Calathea</item>
        <item>Monstera</item>
        <item>Begonia</item>
        <item>Lavender</item>
        <item>Rose</item>
        <item>Zinnia</item>
        <item>Marigold</item>
        <item>Daisy</item>
        <item>Hydrangea</item>
        <item>Tulip</item>
        <item>Sunflower</item>
        <item>Lilac</item>
    </string-array>

</resources>